=== (ongoing) ===


=== 1.7.2 ===

- fixed iteration over dictionary

=== 1.7.1 ===

- fixed query for ratings, that did not filter for review
- fixed bug in render_category_averages template tag

=== 1.7 ===

- added question field to RatingCategory to allow showing more explainatory
  information. The name field remains as label for the form's category fields
  as short version of the question.
- added get_review_count template tag
- added render_category_averages template tag
- fixed average calculation for 0 values

=== 1.6 ===

- added user_has_reviewed template tag
- allow callables for REVIEW_UPDATE_SUCCESS_URL
- made ordering of custom choices make more sense
- added setting to override the default form select widget

=== 1.5 ===

- re-implemented average calculation
- added total_review_average template tag
- added RatingCategoryChoice model and added counts_for_average to
  RatingCategory.

=== 1.4 ===

- Added optional extra content object to review model

=== 1.3 ===

- Added optional success URL setting for update and creation views

=== 1.2.1 ===

- Added success URL setting for delete view

=== 1.2 ===

- Added review delete view

=== 1.1 ===

- Re-arranged migrations

=== 1.0 ===

- BACKWARDS INCOMPATIBLE: Moved from simpletranslation to hvad

=== 0.4 ===

- added identifier field for rating categories

=== 0.3 ===

- added setting to use a custom form

=== 0.2.1 ===

- Fixed form
- Added reviewed item to permission function

=== 0.2 ===

- Added RatingAdmin
- Added average_rating field to Review model

=== 0.1.1 ===
- Added is_editable function to review model

=== 0.1 ===
- Created basic app


# Suggested file syntax:
#
# === (ongoing) ===
# - this is always on top of the file
# - when you release a new version, you rename the last `(ongoing)` to the new
#   version and add a new `=== (ongoing) ===` to the top of the file
#
# === 1.0 ===
# - a major version is created when the software reached a milestone and is
#   feature complete
#